--- a/MobileManage/Project/package.json
+++ b/MobileManage/Project/package.json
@@ -10,10 +10,14 @@
     "axios": "^0.16.2",
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
+    "react-native-fontawesome": "^5.7.0",
+    "react-native-loader": "^1.1.0",
     "react-native-material-design": "^0.3.7",
     "react-native-scrollable-tab-view": "^0.6.7",
+    "react-native-spinkit": "^1.0.3",
     "react-native-sqlite-storage": "^3.3.1",
     "react-native-tabbar": "^1.0.0",
+    "react-native-vector-icons": "^4.2.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
