--- a/MobileManage/Project/package.json
+++ b/MobileManage/Project/package.json
@@ -28,7 +28,8 @@
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0",
-    "store2": "^2.5.1"
+    "store2": "^2.5.1",
+    "validator": "^7.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
