--- a/MobileManage/Project/package.json
+++ b/MobileManage/Project/package.json
@@ -19,6 +19,7 @@
     "react-native-scrollable-tab-view": "^0.6.7",
     "react-native-spinkit": "^1.0.3",
     "react-native-sqlite-storage": "^3.3.1",
+    "react-native-storage": "^0.2.2",
     "react-native-tabbar": "^1.0.0",
     "react-native-vector-icons": "^4.2.0",
     "react-navigation": "^1.0.0-beta.11",
