--- a/MobileManage/Project/package.json
+++ b/MobileManage/Project/package.json
@@ -10,9 +10,12 @@
     "axios": "^0.16.2",
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
+    "react-native-datepicker": "^1.6.0",
+    "react-native-dropdown": "0.0.6",
     "react-native-fontawesome": "^5.7.0",
     "react-native-loader": "^1.1.0",
     "react-native-material-design": "^0.3.7",
+    "react-native-modal-picker": "0.0.16",
     "react-native-scrollable-tab-view": "^0.6.7",
     "react-native-spinkit": "^1.0.3",
     "react-native-sqlite-storage": "^3.3.1",
@@ -21,6 +24,7 @@
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
+    "redux-form": "^6.8.0",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0",
