borrow book by user

--- a/PCBookManage/BookManage/Book.Business/Book.Business.csproj
+++ b/PCBookManage/BookManage/Book.Business/Book.Business.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="BookBusiness.cs" />
     <Compile Include="BookCategoryBusiness.cs" />
+    <Compile Include="ConvertModel\BookBorrowModel.cs" />
     <Compile Include="ConvertModel\BookCategoryModel.cs" />
     <Compile Include="ConvertModel\BookInfoModel.cs" />
     <Compile Include="ConvertModel\ConvertModel.cs" />
