--- a/PCBookManage/BookManage/Book.DataAccess/Book.DataAccess.csproj
+++ b/PCBookManage/BookManage/Book.DataAccess/Book.DataAccess.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BookAgent.cs" />
+    <Compile Include="BookBorrowAgent.cs" />
     <Compile Include="BookCategoryAgent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsersAgent.cs" />
