--- a/PCBookManage/BookManage/Book.EntityModel/Book.EntityModel.csproj
+++ b/PCBookManage/BookManage/Book.EntityModel/Book.EntityModel.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="BookBorrowModel.cs" />
     <Compile Include="BookCategoryModel.cs" />
+    <Compile Include="BookCollectionModel.cs" />
     <Compile Include="BookInfoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result.cs" />
