--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -25,6 +25,7 @@
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
+    "redux-batched-actions": "^0.2.0",
     "redux-form": "^6.8.0",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.3.0",
