--- a/PCBookManage/BookManage/Book.WebApi/Book.WebApi.csproj
+++ b/PCBookManage/BookManage/Book.WebApi/Book.WebApi.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BookCategoryController.cs" />
+    <Compile Include="Controllers\BookCollectionController.cs" />
     <Compile Include="Controllers\BookController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
