--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -13,10 +13,12 @@
     "react-native-check-box": "^1.0.4",
     "react-native-datepicker": "^1.6.0",
     "react-native-dropdown": "0.0.6",
+    "react-native-easy-toast": "^1.0.6",
     "react-native-fontawesome": "^5.7.0",
     "react-native-loader": "^1.1.0",
     "react-native-material-design": "^0.3.7",
     "react-native-modal-picker": "0.0.16",
+    "react-native-photo-upload": "^1.0.3",
     "react-native-scrollable-tab-view": "^0.6.7",
     "react-native-spinkit": "^1.0.3",
     "react-native-sqlite-storage": "^3.3.1",
