--- a/AwesomeProject/android/settings.gradle
+++ b/AwesomeProject/android/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'AwesomeProject'
+include ':react-native-bottom-sheet-behavior'
+project(':react-native-bottom-sheet-behavior').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-bottom-sheet-behavior/android')
 
 include ':app'
