--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.16.2",
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
+    "react-native-bottom-sheet-behavior": "^1.0.0-beta.6",
     "react-native-check-box": "^1.0.4",
     "react-native-datepicker": "^1.6.0",
     "react-native-dropdown": "0.0.6",
