sort order book all listing

--- a/PCBookManage/BookManage/Book.DataModel/Book.DataModel.csproj
+++ b/PCBookManage/BookManage/Book.DataModel/Book.DataModel.csproj
@@ -82,6 +82,9 @@
     <Compile Include="User.cs">
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="V_BookAll.cs">
+      <DependentUpon>DataModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="V_BookBorrow.cs">
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
