add book detail

--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -8,28 +8,37 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "moment": "^2.18.1",
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
+    "react-native-animatable": "^1.2.2",
     "react-native-bottom-sheet-behavior": "^1.0.0-beta.6",
     "react-native-check-box": "^1.0.4",
+    "react-native-collapsible": "^0.8.0",
     "react-native-datepicker": "^1.6.0",
+    "react-native-deprecated-custom-components": "^0.1.0",
     "react-native-dropdown": "0.0.6",
     "react-native-easy-toast": "^1.0.6",
     "react-native-fontawesome": "^5.7.0",
+    "react-native-image-viewer": "0.0.3",
+    "react-native-lightbox": "^0.6.0",
     "react-native-loader": "^1.1.0",
+    "react-native-looped-carousel": "^0.1.7",
     "react-native-material-design": "^0.3.7",
     "react-native-modal-picker": "0.0.16",
     "react-native-photo-upload": "^1.0.3",
+    "react-native-responsive-image": "^2.1.0",
     "react-native-scrollable-tab-view": "^0.6.7",
+    "react-native-snap-carousel": "^2.3.1",
     "react-native-spinkit": "^1.0.3",
     "react-native-sqlite-storage": "^3.3.1",
     "react-native-tabbar": "^1.0.0",
-    "react-native-textinput-effects": "^0.3.1",
     "react-native-vector-icons": "^4.2.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
     "redux-batched-actions": "^0.2.0",
+    "redux-form": "^6.8.0",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0",
