--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -32,6 +32,7 @@
     "react-native-snap-carousel": "^2.3.1",
     "react-native-spinkit": "^1.0.3",
     "react-native-sqlite-storage": "^3.3.1",
+    "react-native-tab-view": "0.0.67",
     "react-native-tabbar": "^1.0.0",
     "react-native-vector-icons": "^4.2.0",
     "react-navigation": "^1.0.0-beta.11",
