get book detail by bookId on Web API

--- a/PCBookManage/BookManage/Book.DataModel/Book.DataModel.csproj
+++ b/PCBookManage/BookManage/Book.DataModel/Book.DataModel.csproj
@@ -60,6 +60,9 @@
     <Compile Include="BookCollection.cs">
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="BookImage.cs">
+      <DependentUpon>DataModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="BookInfo.cs">
       <DependentUpon>DataModel.tt</DependentUpon>
     </Compile>
