--- a/PCBookManage/BookManage/Book.Business/Book.Business.csproj
+++ b/PCBookManage/BookManage/Book.Business/Book.Business.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ConvertModel\BookBorrowModel.cs" />
     <Compile Include="ConvertModel\BookCategoryModel.cs" />
     <Compile Include="ConvertModel\BookCollectionModel.cs" />
+    <Compile Include="ConvertModel\BookImageModel.cs" />
     <Compile Include="ConvertModel\BookInfoModel.cs" />
     <Compile Include="ConvertModel\ConvertModel.cs" />
     <Compile Include="ConvertModel\UsersModel.cs" />
@@ -79,6 +80,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="ConvertModel\Extension.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
