--- a/PCBookManage/BookManage/Book.EntityModel/Book.EntityModel.csproj
+++ b/PCBookManage/BookManage/Book.EntityModel/Book.EntityModel.csproj
@@ -43,6 +43,7 @@
     <Compile Include="BookBorrowModel.cs" />
     <Compile Include="BookCategoryModel.cs" />
     <Compile Include="BookCollectionModel.cs" />
+    <Compile Include="BookImageModel.cs" />
     <Compile Include="BookInfoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Result.cs" />
