--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -24,12 +24,12 @@
     "react-native-spinkit": "^1.0.3",
     "react-native-sqlite-storage": "^3.3.1",
     "react-native-tabbar": "^1.0.0",
+    "react-native-textinput-effects": "^0.3.1",
     "react-native-vector-icons": "^4.2.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
     "redux": "^3.7.1",
     "redux-batched-actions": "^0.2.0",
-    "redux-form": "^6.8.0",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^4.3.0",
     "redux-thunk": "^2.2.0",
