--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "fs-loading": "^0.1.3",
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
     "react-native-bottom-sheet-behavior": "^1.0.0-beta.6",
@@ -16,7 +17,6 @@
     "react-native-dropdown": "0.0.6",
     "react-native-easy-toast": "^1.0.6",
     "react-native-fontawesome": "^5.7.0",
-    "react-native-loader": "^1.1.0",
     "react-native-material-design": "^0.3.7",
     "react-native-modal-picker": "0.0.16",
     "react-native-photo-upload": "^1.0.3",
