--- a/AwesomeProject/.babelrc
+++ b/AwesomeProject/.babelrc
@@ -1,8 +1,11 @@
 {
-  "presets": ["react-native"],
+  "presets": [
+    "react-native"
+  ],
   "plugins": [
     "babel-plugin-transform-class-properties",
-    "transform-decorators-legacy"
+    "transform-decorators-legacy",
+    ["import", { "libraryName": "antd-mobile" }]
   ]
+//  "plugins": [["import", { "libraryName": "antd-mobile" }]]
 }
-
