--- a/AwesomeProject/android/app/build.gradle
+++ b/AwesomeProject/android/app/build.gradle
@@ -85,7 +85,7 @@ apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
  * Upload all the APKs to the Play Store and people will download
  * the correct one based on the CPU architecture of their device.
  */
-def enableSeparateBuildPerCPUArchitecture = false
+def enableSeparateBuildPerCPUArchitecture = true
 
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
@@ -106,6 +106,14 @@ android {
             abiFilters "armeabi-v7a", "x86"
         }
     }
+      signingConfigs{
+                release{
+            storeFile file("F://ReactNativeProject/Book/react-native-book-project/AwesomeProject/android/app/SuperBigLw-key.keystore")
+            storePassword "8870925"
+            keyAlias "SuperBigLw-key-alias"
+            keyPassword "8870925"
+        }
+        }
     splits {
         abi {
             reset()
@@ -118,6 +126,8 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
+
         }
     }
     // applicationVariants are e.g. debug, release
