--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -7,9 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "antd-mobile": "^1.5.0",
     "axios": "^0.16.2",
-    "moment": "^2.18.1",
     "fs-loading": "^0.1.3",
+    "moment": "^2.18.1",
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
     "react-native-animatable": "^1.2.2",
@@ -29,6 +30,7 @@
     "react-native-modal-picker": "0.0.16",
     "react-native-photo-upload": "^1.0.3",
     "react-native-responsive-image": "^2.1.0",
+    "react-native-root-toast": "^1.1.2",
     "react-native-scrollable-tab-view": "^0.6.7",
     "react-native-snap-carousel": "^2.3.1",
     "react-native-spinkit": "^1.0.3",
@@ -52,6 +54,7 @@
     "babel-core": "^6.25.0",
     "babel-jest": "20.0.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-import": "^1.2.1",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
