--- a/AwesomeProject/android/settings.gradle
+++ b/AwesomeProject/android/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'AwesomeProject'
+rootProject.name = 'BookManagement'
 include ':react-native-bottom-sheet-behavior'
 project(':react-native-bottom-sheet-behavior').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-bottom-sheet-behavior/android')
 
