--- a/AwesomeProject/android/app/build.gradle
+++ b/AwesomeProject/android/app/build.gradle
@@ -90,7 +90,7 @@ def enableSeparateBuildPerCPUArchitecture = true
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = true
 
 android {
     compileSdkVersion 23
@@ -108,7 +108,7 @@ android {
     }
       signingConfigs{
                 release{
-            storeFile file("F://ReactNativeProject/Book/react-native-book-project/BookManagement/android/app/SuperBigLw-key.keystore")
+            storeFile file("F://react-native-book-project/AwesomeProject/android/app/SuperBigLw-key.keystore")
             storePassword "8870925"
             keyAlias "SuperBigLw-key-alias"
             keyPassword "8870925"
