--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "antd-mobile": "^1.5.0",
     "axios": "^0.16.2",
+    "fs-loading": "^0.1.3",
     "moment": "^2.18.1",
     "react": "16.0.0-alpha.12",
     "react-native": "0.45.1",
     "react-native-animatable": "^1.2.2",
+    "react-native-app-intro": "^1.1.5",
     "react-native-bottom-sheet-behavior": "^1.0.0-beta.6",
     "react-native-check-box": "^1.0.4",
     "react-native-collapsible": "^0.8.0",
