--- a/AwesomeProject/android/settings.gradle
+++ b/AwesomeProject/android/settings.gradle
@@ -1,5 +1,6 @@
 rootProject.name = 'BookManagement'
 include ':react-native-bottom-sheet-behavior'
 project(':react-native-bottom-sheet-behavior').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-bottom-sheet-behavior/android')
-
+include ':react-native-splash-screen'   
+project(':react-native-splash-screen').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-splash-screen/android')
 include ':app'
