--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -35,6 +35,7 @@
     "react-native-scrollable-tab-view": "^0.6.7",
     "react-native-snap-carousel": "^2.3.1",
     "react-native-spinkit": "^1.0.3",
+    "react-native-splash-screen": "^2.1.0",
     "react-native-sqlite-storage": "^3.3.1",
     "react-native-tab-view": "0.0.67",
     "react-native-tabbar": "^1.0.0",
