--- a/AwesomeProject/android/settings.gradle
+++ b/AwesomeProject/android/settings.gradle
@@ -4,3 +4,5 @@ project(':react-native-bottom-sheet-behavior').projectDir = new File(rootProject
 include ':react-native-splash-screen'   
 project(':react-native-splash-screen').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-splash-screen/android')
 include ':app'
+include ':react-native-bottom-sheet'
+project(':react-native-bottom-sheet').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-bottom-sheet/android')
