--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.45.1",
     "react-native-animatable": "^1.2.2",
     "react-native-app-intro": "^1.1.5",
+    "react-native-bottom-sheet": "^1.0.2",
     "react-native-bottom-sheet-behavior": "^1.0.0-beta.6",
     "react-native-check-box": "^1.0.4",
     "react-native-collapsible": "^0.8.0",
