--- a/AwesomeProject/android/settings.gradle
+++ b/AwesomeProject/android/settings.gradle
@@ -6,3 +6,5 @@ project(':react-native-splash-screen').projectDir = new File(rootProject.project
 include ':app'
 include ':react-native-bottom-sheet'
 project(':react-native-bottom-sheet').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-bottom-sheet/android')
+include ':react-native-camera'
+project(':react-native-camera').projectDir = new File(rootProject.projectDir, 	'../node_modules/react-native-camera/android')
