用户登录改成直接登录公司邮箱

--- a/AwesomeProject/package.json
+++ b/AwesomeProject/package.json
@@ -17,6 +17,7 @@
     "react-native-app-intro": "^1.1.5",
     "react-native-bottom-sheet": "^1.0.2",
     "react-native-bottom-sheet-behavior": "^1.0.0-beta.6",
+    "react-native-camera": "git+https://github.com/lwansbrough/react-native-camera.git",
     "react-native-check-box": "^1.0.4",
     "react-native-collapsible": "^0.8.0",
     "react-native-datepicker": "^1.6.0",
@@ -29,6 +30,7 @@
     "react-native-loader": "^1.1.0",
     "react-native-looped-carousel": "^0.1.7",
     "react-native-material-design": "^0.3.7",
+    "react-native-modal": "^2.5.0",
     "react-native-modal-picker": "0.0.16",
     "react-native-photo-upload": "^1.0.3",
     "react-native-responsive-image": "^2.1.0",
