bug-将公司固定人员设置成管理员，其他人设置成普通用户

--- a/AwesomeProject/app/config/config.json
+++ b/AwesomeProject/app/config/config.json
@@ -1,4 +1,15 @@
 {
-    "LoginAPIUrl":"http://116.211.7.158:6789",
-    "APIUrl": "http://192.168.1.116:8001"
+    "LoginAPIUrl": "http://116.211.7.158:6789",
+    "APIUrl": "http://192.168.1.116:8001",
+    "ManageUserList": [
+        {
+            "userId": "tiany"
+        },
+        {
+            "userId": "qiuyangjiao"
+        },
+        {
+            "userId": "huangzixia"
+        }
+    ]
 }
